# nyxor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.claude/skills/nyxscript/: SKILL.md
.github/workflows/: _tmp-test-fail-on.yml  ci.yml  cloud-demo.yml  pages.yml  publish-pypi.yml
cloud/: report.html
docs/: architecture.md  contributing.md  nyxscript.md  plugin-development.md  publishing.md
editors/vscode-nyxscript/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode-nyxscript/src/: extension.ts
editors/vscode-nyxscript/syntaxes/: nyxscript.tmLanguage.json
lib/: asset.nyx  collection.nyx  csv.nyx  dict.nyx  finding.nyx  format.nyx  ftp.nyx  hash.nyx  http.nyx  lambdas.nyx  math.nyx  net.nyx  random.nyx  regex.nyx  report.nyx  set.nyx  strings.nyx  table.nyx  text.nyx  time.nyx  validate.nyx
scripts/: bootstrap.py
src/nyxor/: __init__.py
src/nyxor/api/: app.py  oauth.py
src/nyxor/core/: banner.py  cli.py  config.py  context.py  errors.py  events.py  explain.py  interfaces.py  logging.py  models.py  netparse.py  output.py  plugins.py  qr.py  scoring.py
src/nyxor/core/reporting/: __init__.py  base.py  document.py  html_writer.py  json_writer.py  markdown_writer.py  sarif_writer.py
src/nyxor/core/scripting/: __init__.py  ast_nodes.py  builtins.py  errors.py  interpreter.py  lexer.py  linter.py  parser.py  sockets.py  stdlib.py  template.py  ui.py
src/nyxor/lsp/: analysis.py  server.py
src/nyxor/mcp/: server.py
src/nyxor/plugins/analyze/: advisor.py  heuristics.py  ollama.py  plugin.py
src/nyxor/plugins/ask/: plugin.py
src/nyxor/plugins/audit/: plugin.py
src/nyxor/plugins/auth/: plugin.py  store.py
src/nyxor/plugins/config_cmd/: plugin.py
src/nyxor/plugins/dns_/: lookups.py  plugin.py
src/nyxor/plugins/flex/: plugin.py
src/nyxor/plugins/hostcheck/: autorun.py  plugin.py  processes.py  reputation.py
src/nyxor/plugins/http_/: fingerprint.py  inspector.py  plugin.py  screenshot.py
src/nyxor/plugins/inventory/: plugin.py  store.py
src/nyxor/plugins/matrix/: plugin.py
src/nyxor/plugins/mcp_cmd/: plugin.py
src/nyxor/plugins/network/: discovery.py  plugin.py  ports.py
src/nyxor/plugins/plugin_cmd/: plugin.py
src/nyxor/plugins/recon/: plugin.py  sources.py
src/nyxor/plugins/report/: plugin.py
src/nyxor/plugins/script/: plugin.py
src/nyxor/plugins/serve/: plugin.py
src/nyxor/plugins/system/: doctor.py  plugin.py
src/nyxor/plugins/tls_/: inspector.py  plugin.py
src/nyxor/plugins/trends/: analysis.py  plugin.py  store.py
src/nyxor/plugins/tui/: app.py  browser.py  editor.py  plugin.py
src/nyxor/plugins/update/: plugin.py
src/nyxor/plugins/watch/: plugin.py
tests/: _http_mocks.py  conftest.py
tests/api/: conftest.py  test_oauth.py  test_oauth_endpoints.py  test_rate_limit.py  test_ssrf_guard.py
tests/core/: test_banner.py  test_cli_help_grouping.py  test_config.py  test_events.py  test_explain.py  test_lib_asset.py  test_lib_ftp.py  test_lib_hash_and_csv.py  test_lib_http.py  test_lib_lambdas.py  test_lib_random_text_table.py  test_lib_regex.py  test_lib_set_net_format_collection.py  test_lib_time.py  test_models.py  test_output_markup_safety.py  test_plugins.py  test_qr.py  test_reporting.py  test_scoring.py  test_scripting_bytes_builtins.py  test_scripting_connect_tls.py  test_scripting_dict_and_try.py  test_scripting_docstrings.py  test_scripting_encoding_random_builtins.py  test_scripting_import_traversal.py  test_scripting_lambdas_and_hof.py  test_scripting_linter.py  test_scripting_packet_builder.py  test_scripting_raw_strings.py  test_scripting_regex.py  test_scripting_resource_limits.py  test_scripting_save_traversal.py  test_scripting_sockets.py  test_scripting_str_formatting.py  test_scripting_ui_markup_safety.py  test_scripting_unsafe_directive.py
tests/lsp/: conftest.py  test_analysis.py  test_server.py
tests/plugins/: test_analyze_advisor.py  test_analyze_heuristics.py  test_analyze_ollama.py  test_audit.py  test_auth_store.py  test_dns_lookups.py  test_flex.py  test_http.py  test_http_fingerprint.py  test_http_inspector_body_cap.py  test_http_inspector_ssrf_guard.py  test_http_screenshot.py  test_inventory_store.py  test_matrix.py  test_network.py  test_recon.py  test_script_browser.py  test_script_editor.py  test_script_error_display.py  test_script_output_markup.py  test_system_doctor.py  test_tls.py  test_trends.py  test_tui.py
website/: index.html
website/assets/: script.js  style.css
wiki/: Architecture.md  CLI-Reference.md  Contributing.md  FAQ-Troubleshooting.md  GitHub-Action.md  Glossary.md  Home.md  Installation.md  NyxScript-Cookbook.md  NyxScript-Language-Guide.md  NyxScript-Standard-Library-Reference.md  Plugin-Development.md  Quickstart.md  REST-API.md  Security.md  _Footer.md  _Sidebar.md
