[project]
name = "nyxor"
version = "0.6.6"
description = "NYXOR — a modular, cross-platform security assessment and infrastructure auditing toolkit."
readme = "README.md"
authors = [
    { name = "ivnovomi", email = "idimnovdie1602@protonmail.com" }
]
requires-python = ">=3.13"
license = "MIT"
keywords = ["security", "audit", "network", "dns", "tls", "http", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    "typer>=0.15.1",
    "rich>=13.9.4",
    "pydantic>=2.10.3",
    "structlog>=24.4.0",
    "platformdirs>=4.3.6",
    "tomli-w>=1.1.0",
    "dnspython>=2.7.0",
    # httpx2 is Pydantic's actively maintained continuation of httpx (see
    # https://github.com/pydantic/httpx2) — same API, same httpcore-level
    # extensions (including the `sni_hostname` request extension the SSRF
    # guard's IP-pinning depends on, see plugins/http_/inspector.py), timely
    # security patches. httpx itself sees limited activity these days.
    "httpx2>=2.7.0",
    "cryptography>=44.0.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.2",
    "textual>=1.0.0",
    "numpy>=2.0.0",
    "psutil>=6.0.0",
    "qrcode>=7.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.0",
    "ruff>=0.8.4",
    "types-pyyaml>=6.0.12",
    "types-psutil>=6.0.0",
    "types-qrcode>=8.2.0.20260518",
]
lsp = [
    "pygls>=1.3.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "slowapi>=0.1.9",
]
mcp = [
    "mcp>=1.0.0",
]
# `nyx http inspect --screenshot` (gated behind --unsafe — see
# plugins/http_/screenshot.py). Both are heavy (a real browser engine, a
# terminal-graphics library) and only needed by that one opt-in flag, so
# they stay out of the core install.
screenshot = [
    "playwright>=1.48.0",
    # Auto-detects Kitty/Sixel/half-cell/plain-unicode at render time and
    # falls back gracefully — no per-terminal capability code of our own.
    "textual-image>=0.7.0",
]

[project.scripts]
nyxor = "nyxor.core.cli:main"
nyx = "nyxor.core.cli:main"

# Built-in plugins register through the same entry-point group that third
# party plugins use. The Core does not know about any plugin by name — it
# only knows how to discover this group. See the "Plugin Development" wiki page.
[project.entry-points."nyxor.plugins"]
system = "nyxor.plugins.system.plugin:PLUGIN"
config = "nyxor.plugins.config_cmd.plugin:PLUGIN"
plugin = "nyxor.plugins.plugin_cmd.plugin:PLUGIN"
network = "nyxor.plugins.network.plugin:PLUGIN"
dns = "nyxor.plugins.dns_.plugin:PLUGIN"
tls = "nyxor.plugins.tls_.plugin:PLUGIN"
http = "nyxor.plugins.http_.plugin:PLUGIN"
inventory = "nyxor.plugins.inventory.plugin:PLUGIN"
report = "nyxor.plugins.report.plugin:PLUGIN"
update = "nyxor.plugins.update.plugin:PLUGIN"
tui = "nyxor.plugins.tui.plugin:PLUGIN"
audit = "nyxor.plugins.audit.plugin:PLUGIN"
script = "nyxor.plugins.script.plugin:PLUGIN"
watch = "nyxor.plugins.watch.plugin:PLUGIN"
serve = "nyxor.plugins.serve.plugin:PLUGIN"
auth = "nyxor.plugins.auth.plugin:PLUGIN"
trends = "nyxor.plugins.trends.plugin:PLUGIN"
analyze = "nyxor.plugins.analyze.plugin:PLUGIN"
ask = "nyxor.plugins.ask.plugin:PLUGIN"
recon = "nyxor.plugins.recon.plugin:PLUGIN"
matrix = "nyxor.plugins.matrix.plugin:PLUGIN"
flex = "nyxor.plugins.flex.plugin:PLUGIN"
hostcheck = "nyxor.plugins.hostcheck.plugin:PLUGIN"
mcp_cmd = "nyxor.plugins.mcp_cmd.plugin:PLUGIN"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv_build]
module-name = "nyxor"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: typer's `= typer.Option(...)` / `= typer.Argument(...)` default-value
# pattern is the documented, idiomatic way to declare CLI parameters.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"src/nyxor/core/reporting/html_writer.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
